# Programming-languages-concepts

./: README.md
ex1/VirtualMachine/: CMakeLists.txt  main.cpp  readme.md
ex1/VirtualMachine/Programms/: Factorial  Fibbonachi
ex1/VirtualMachine/VirtualMachine/: VirtualMachine.cpp  VirtualMachine.h
ex1/VirtualMachine/VirtualMachine/CommandService/: CommandService.cpp  CommandService.h
ex1/VirtualMachine/VirtualMachine/Converter/ByteToCodeConverter/: ByteToCodeConverter.cpp  ByteToCodeConverter.h
ex1/VirtualMachine/VirtualMachine/Converter/CodeToByteConverter/: CodeToByteConverter.cpp  CodeToByteConverter.h
ex1/VirtualMachine/VirtualMachine/Converter/CodeToWordConverter/: CodeToWordConverter.cpp  CodeToWordConverter.h
ex1/VirtualMachine/VirtualMachine/Converter/WordToCodeConverter/: WordToCodeConverter.cpp  WordToCodeConverter.h
ex1/VirtualMachine/VirtualMachine/FullFileReader/ReadFullFile/: FullFileReader.cpp  FullFileReader.h
ex1/VirtualMachine/VirtualMachine/SafeStack/: SafeStack.h
ex2/exceptions/: README.md  main.cpp
ex3/inheritance/: main.cpp
